--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "@fullcalendar/react": "^6.1.10",
     "@fullcalendar/timegrid": "^6.1.10",
     "@popperjs/core": "^2.11.8",
+    "@react-oauth/google": "^0.12.1",
     "antd": "^5.3.0",
     "aos": "^2.3.4",
     "apexcharts": "^3.41.1",
     "axios": "^1.6.5",
     "bootstrap": "^5.1.3",
-    "@react-oauth/google": "^0.12.1",
     "bootstrap-daterangepicker": "^3.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "config": "^3.3.9",
@@ -71,6 +71,7 @@
     "react-sticky-box": "^2.0.4",
     "react-tag-input-component": "^2.0.2",
     "react-toastify": "^10.0.3",
+    "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1",
     "style-loader": "^3.3.1",
     "styled-components": "^6.0.7",
