--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react": "^7.32.2",
     "feather-icons-react": "^0.6.2",
     "font-awesome": "^4.7.0",
+    "formik": "^2.4.5",
     "google-maps-react": "^2.0.6",
     "jquery": "^3.7.0",
     "mini-css-extract-plugin": "^2.4.5",
@@ -76,7 +77,8 @@
     "style-loader": "^3.3.1",
     "styled-components": "^6.0.7",
     "swiper": "^8.4.7",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
