--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fullcalendar/interaction": "^6.1.10",
     "@fullcalendar/react": "^6.1.10",
     "@fullcalendar/timegrid": "^6.1.10",
+    "@paypal/react-paypal-js": "^8.1.3",
     "@popperjs/core": "^2.11.8",
     "@react-oauth/google": "^0.12.1",
     "antd": "^5.3.0",
@@ -28,6 +29,7 @@
     "axios": "^1.6.5",
     "bootstrap": "^5.1.3",
     "bootstrap-daterangepicker": "^3.1.0",
+    "buffer": "^6.0.3",
     "clean-webpack-plugin": "^4.0.0",
     "config": "^3.3.9",
     "css-loader": "^6.5.1",
@@ -39,6 +41,7 @@
     "jquery": "^3.7.0",
     "mini-css-extract-plugin": "^2.4.5",
     "moment": "^2.29.4",
+    "node-fetch": "^3.3.2",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1",
     "rc-time-picker": "^3.7.3",
