--- a/package.json
+++ b/package.json
@@ -20,13 +20,11 @@
     "@fullcalendar/interaction": "^6.1.10",
     "@fullcalendar/react": "^6.1.10",
     "@fullcalendar/timegrid": "^6.1.10",
-<<<<<<< Updated upstream
-=======
     "@google-pay/button-react": "^3.0.10",
->>>>>>> Stashed changes
     "@paypal/react-paypal-js": "^8.1.3",
     "@popperjs/core": "^2.11.8",
     "@react-oauth/google": "^0.12.1",
+    "@zegocloud/zego-uikit-prebuilt": "^1.11.0",
     "antd": "^5.3.0",
     "aos": "^2.3.4",
     "apexcharts": "^3.41.1",
