--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "style-loader": "^3.3.1",
     "styled-components": "^6.0.7",
     "swiper": "^8.4.7",
+    "vite": "^5.2.2",
     "webpack-cli": "^5.1.4",
     "yup": "^1.3.3"
   },
