--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@babel/preset-react": "^7.16.5",
     "babel-loader": "^9.1.3",
     "eslint": "^8.44.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "opn": "^6.0.0",
     "webpack": "^5.85.0",
