--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-router-dom": "^5.3.4",
     "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
+    "react-sound": "^1.2.0",
     "react-sticky-box": "^2.0.4",
     "react-tag-input-component": "^2.0.2",
     "react-toastify": "^10.0.3",
@@ -85,6 +86,7 @@
     "style-loader": "^3.3.1",
     "styled-components": "^6.0.7",
     "swiper": "^8.4.7",
+    "use-sound": "^4.0.1",
     "vite": "^5.2.2",
     "webpack-cli": "^5.1.4",
     "yup": "^1.3.3"
