--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-data-table-component": "^7.5.3",
     "react-data-table-component-extensions": "^1.6.0",
     "react-datepicker": "^4.12.0",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-facebook-login": "^4.1.1",
@@ -89,7 +90,8 @@
     "use-sound": "^4.0.1",
     "vite": "^5.2.2",
     "webpack-cli": "^5.1.4",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
